--- a/3.html
+++ b/3.html
@@ -1,5 +1,5 @@
 <br/>
-<h4>Introduction of Market and Forex Basics. What The Forex Trading?</h4>
+<h4>Introduction of Market and Forex Basics</h4>
 <p>Forex Trading is trading currencies from different countries . Forex is short for Foreign Exchange ( currency of exchange ) . An example of forex trading is buying Euros ( European currency ) , while simultaneously selling the USD ( US currency ) , can be abbreviated EUR / USD .</p>
 <br><center><a href="http://1.bp.blogspot.com/-l1FSK6bn8Ak/VZ_c3DWYtnI/AAAAAAAAC8E/vP6dUWLm4XE/s1600/Trading.png" imageanchor="1"><img border="0" src="http://1.bp.blogspot.com/-l1FSK6bn8Ak/VZ_c3DWYtnI/AAAAAAAAC8E/vP6dUWLm4XE/s1600/Trading.png"></a></center><br>
 <br/>
