--- a/3.html
+++ b/3.html
@@ -1,16 +1,16 @@
 <br/>
-<h4>Introduction of Market and Forex Basics</h4>
+<h4><b>Introduction Of Market And Forex Basics</b></h4>
 <p>Forex Trading is trading currencies from different countries . Forex is short for Foreign Exchange ( currency of exchange ) . An example of forex trading is buying Euros ( European currency ) , while simultaneously selling the USD ( US currency ) , can be abbreviated EUR / USD .</p>
 <br><center><a href="http://1.bp.blogspot.com/-l1FSK6bn8Ak/VZ_c3DWYtnI/AAAAAAAAC8E/vP6dUWLm4XE/s1600/Trading.png" imageanchor="1"><img border="0" src="http://1.bp.blogspot.com/-l1FSK6bn8Ak/VZ_c3DWYtnI/AAAAAAAAC8E/vP6dUWLm4XE/s1600/Trading.png"></a></center><br>
 <br/>
-<h4>Forex Market</h4>
+<h4><b>Forex Market</b></h4>
 <p>Unlike the traditional market. Because here is the currency traded, the market (where the merchants / traders buying and selling) is called the forex market. Who are the perpetrators of this forex market? very diverse: can bank (main), large enterprises, state, institutions, speculators, etc. Given the scope and the culprit is global / international, market / forex trading looks to be very exciting. Why? Because it makes the forex market become the biggest money market (4T $ / day), and very liquid (can be buying and selling at the market price regardless of the amount). Plus, this makes the forex market is open 24 hours non-stop, so that we can trade at any time, we adjust our spare time. Unlike traditional markets, the forex market has no physical location in particular, almost the majority of today is done through a network of trade electronically. So the transaction process can happen quickly and in very large numbers anyway. With the development of Internet technology (electronics) it will be very easy for new people to do forex trading online.</p>
 <br/>
-<h4>Forex Trading Destination</h4>
+<h4><b>Forex Trading Destination</b></h4>
 <p>Market conditions and prices in the forex market moves very dynamic , can change at any time quickly , in response to events both economics , politics , war , disaster , etc . Especially for countries with advanced economies and a stronger , a little no sensitive information , then the price of its currency could move up and down . This is seen by traders as an opportunity and an opportunity to make a trade. So simply , the purpose of trading forex is to achieve a profit from rising and falling currency exchange rate .</p>
 <br/>
-<h4>Forex Trading Opportunity</h4>
+<h4><b>Forex Trading Opportunity</b></h4>
 <p>Internet has made lot of revolution in world trade , including a very strong influence in the world of forex trading . With the internet , it is now the forex can be done by anyone . If the first can only be done by big players only ( bank , country , institution ) , so now everyone can trade with more popping and online retail forex broker . You and I can trade forex online with ease and with little capital . Even to try the simulation is also very easy , with the facility of trading with a demo account broker .</p>
 <br/>
-<h4>Forex Risk</h4>
+<h4><b>Forex Risk</b></h4>
 <p>Forex like a double-edged sword . With forex can make us rich quick , but the opposite can also instantly mengikikis depleted our capital . No matter whether you consider forex as an investment or as a regular trade , which obviously forex has a high risk factor . So understand completely the risks in forex and not to misstep .</p>
